fix: 🐛 hide iphone whitespace on scroll

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -28,6 +28,7 @@
   .html,
   .body {
     height: 100%;
+    overflow-y: hidden;
   }
 
   .scrollbar-hidden::-webkit-scrollbar {
